setup/manifests/gravitino/gravitino-manifests-1.0.8.yaml
---
# Source: gravitino/charts/mysql/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: gravitino-mysql
  namespace: "metadata"
  labels:
    app.kubernetes.io/instance: gravitino
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mysql
    app.kubernetes.io/version: 8.0.36
    helm.sh/chart: mysql-10.2.1
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: gravitino
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: mysql
      app.kubernetes.io/version: 8.0.36
      helm.sh/chart: mysql-10.2.1
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
  ingress:
    - ports:
        - port: 3306
        - port: 3306
---
# Source: gravitino/charts/mysql/templates/primary/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: gravitino-mysql-headless
  namespace: "metadata"
  labels:
    app.kubernetes.io/instance: gravitino
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mysql
    app.kubernetes.io/version: 8.0.36
    helm.sh/chart: mysql-10.2.1
    app.kubernetes.io/component: primary
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
  selector:
    app.kubernetes.io/instance: gravitino
    app.kubernetes.io/name: mysql
    app.kubernetes.io/component: primary
---
# Source: gravitino/charts/mysql/templates/primary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gravitino-mysql
  namespace: "metadata"
  labels:
    app.kubernetes.io/instance: gravitino
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mysql
    app.kubernetes.io/version: 8.0.36
    helm.sh/chart: mysql-10.2.1
    app.kubernetes.io/component: primary
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
      targetPort: mysql
      nodePort: null
  selector:
    app.kubernetes.io/instance: gravitino
    app.kubernetes.io/name: mysql
    app.kubernetes.io/component: primary
---
# Source: gravitino/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gravitino
  namespace: metadata
  labels:
    app: gravitino
    chart: gravitino-1.0.8
    release: gravitino
  annotations:
    {}
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8090
      protocol: TCP
      targetPort: 8090
    - name: http1
      port: 9001
      protocol: TCP
      targetPort: 9001
  selector:
    app: gravitino
    release: gravitino
---
# Source: gravitino/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gravitino
  namespace: metadata
  labels:
    app: gravitino
    chart: gravitino-1.0.8
    release: gravitino
  annotations:
    {}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gravitino
      release: gravitino
  template:
    metadata:
      labels:
        app: gravitino
        name: gravitino
        release: gravitino
      annotations:
    spec:    
      containers:
        - name: gravitino
          image: docker.io/apache/gravitino:1.0.0
          imagePullPolicy: "IfNotPresent"
          command:
            - "/bin/bash"
            - "/tmp/conf/init.sh"
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            timeoutSeconds: 5
          resources:
            {}
          securityContext:
            runAsNonRoot: false
            runAsUser: 0
          ports:
            - name: http
              containerPort: 8090
              protocol: TCP
            - name: http1
              containerPort: 9001
              protocol: TCP              
          volumeMounts:
            - name: gravitino-conf
              mountPath: /tmp/conf
            - name: storage
              mountPath: /root/gravitino/data/jdbc
            - mountPath: /root/gravitino/logs
              name: gravitino-log  
      nodeSelector:
        {}
      affinity:
        {}
      tolerations:
        []
      volumes:
        - name: gravitino-conf
          configMap:
            name: gravitino
        - emptyDir: {}
          name: scripts-emptydir
        - name: storage
          emptyDir: {}
        - emptyDir: {}
          name: gravitino-log
---
# Source: gravitino/charts/mysql/templates/primary/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gravitino-mysql
  namespace: "metadata"
  labels:
    app.kubernetes.io/instance: gravitino
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mysql
    app.kubernetes.io/version: 8.0.36
    helm.sh/chart: mysql-10.2.1
    app.kubernetes.io/component: primary
spec:
  replicas: 1
  podManagementPolicy: ""
  selector:
    matchLabels:
      app.kubernetes.io/instance: gravitino
      app.kubernetes.io/name: mysql
      app.kubernetes.io/component: primary
  serviceName: gravitino-mysql
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/configuration: 01a87a51399922915a12f778d1eab987216f1332fc2bbe6e8e4574cbe8412cf1
      labels:
        app.kubernetes.io/instance: gravitino
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: mysql
        app.kubernetes.io/version: 8.0.36
        helm.sh/chart: mysql-10.2.1
        app.kubernetes.io/component: primary
    spec:
      serviceAccountName: gravitino-mysql
      
      automountServiceAccountToken: false
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: gravitino
                    app.kubernetes.io/name: mysql
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      containers:
        - name: mysql
          image: docker.io/bitnamilegacy/mysql:8.0.36-debian-12-r12
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 1001
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: {}
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: mysql
              containerPort: 3306
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            exec:
              command:
                - /bin/bash
                - -ec
                - |
                  password_aux="${MYSQL_ROOT_PASSWORD:-}"
                  if [[ -f "${MYSQL_ROOT_PASSWORD_FILE:-}" ]]; then
                      password_aux=$(cat "$MYSQL_ROOT_PASSWORD_FILE")
                  fi
                  mysqladmin status -uroot -p"${password_aux}"
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            exec:
              command:
                - /bin/bash
                - -ec
                - |
                  password_aux="${MYSQL_ROOT_PASSWORD:-}"
                  if [[ -f "${MYSQL_ROOT_PASSWORD_FILE:-}" ]]; then
                      password_aux=$(cat "$MYSQL_ROOT_PASSWORD_FILE")
                  fi
                  mysqladmin status -uroot -p"${password_aux}"
          startupProbe:
            failureThreshold: 10
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            exec:
              command:
                - /bin/bash
                - -ec
                - |
                  password_aux="${MYSQL_ROOT_PASSWORD:-}"
                  if [[ -f "${MYSQL_ROOT_PASSWORD_FILE:-}" ]]; then
                      password_aux=$(cat "$MYSQL_ROOT_PASSWORD_FILE")
                  fi
                  mysqladmin status -uroot -p"${password_aux}"
          resources:
            limits:
              cpu: 750m
              ephemeral-storage: 1024Mi
              memory: 768Mi
            requests:
              cpu: 500m
              ephemeral-storage: 50Mi
              memory: 512Mi
          volumeMounts:
            - name: data
              mountPath: /bitnami/mysql
            - name: empty-dir
              mountPath: /tmp
              subPath: tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/mysql/conf
              subPath: app-conf-dir
            - name: empty-dir
              mountPath: /opt/bitnami/mysql/tmp
              subPath: app-tmp-dir
            - name: empty-dir
              mountPath: /opt/bitnami/mysql/logs
              subPath: app-logs-dir
            - name: config
              mountPath: /opt/bitnami/mysql/conf/my.cnf
              subPath: my.cnf
      volumes:
        - name: config
          configMap:
            name: gravitino-mysql
        - name: empty-dir
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          app.kubernetes.io/instance: gravitino
          app.kubernetes.io/name: mysql
          app.kubernetes.io/component: primary
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
---
# Source: gravitino/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gravitino-test-connection
  namespace: metadata
  annotations:
    helm.sh/hook: test
    helm.sh/hook-delete-policy: hook-succeeded
spec:
  containers:
    - name: test-connection
      image: curlimages/curl:latest
      command:
        - /bin/sh
        - -c
        - |
          [...]
  restartPolicy: Never
